# RawFileConverter

./: README.md  pyproject.toml
code/: raw_to_tif.py
code/.ipynb_checkpoints/: Suite2p_exploreResults_multiPlane-checkpoint.ipynb  Suite2p_quickRun-checkpoint.ipynb
code/utils/: plotters.py  process.py
tests/: test_converter.py
