[tool.poetry]
name = "RawFileConverter"
version = "0.1.0"
description = "Python package to convert .RAW file outputs specifically from thorlabs equipment. In development"
authors = ["John Stout"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
suite2p = "0.14.2"
openpyxl = "3.1.2"
pynwb  = "2.5.0"
pynapple = "0.4.0"
h5py = "3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
